--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
+
+# Secrets scanningの設定
+[build.processing]
+  secrets_scan_smart_detection_enabled = false
